sorted/examples/07-unrecognized-pattern.stderr
error: unsupported by #[sorted]
  --> examples/07-unrecognized-pattern.rs:12:9
   |
12 |         [] => Some(0),
   |         ^^
